# DSA-Project-3

./: CMakeCache.txt  CMakeLists.txt  DSA_Project3.cbp  DataWindow.cpp  DataWindow.h  FileIO.h  FileReadingAndPlotting.h  Graphing.h  HomeWindow.cpp  HomeWindow.h  Makefile  README.md  School.h  Sorting.cpp  Sorting.h  build.ninja  cmake_install.cmake  main.cpp  test.cpp
.cmake/api/v1/reply/: cache-v2-707a234e833c15b20d4c.json  cmakeFiles-v1-e369b62532a568749216.json  codemodel-v2-faede3821e276b91e125.json  index-2024-11-22T21-46-50-0042.json  target-DSA_Project3-Debug-e6e8a85c86651915200f.json  toolchains-v1-9d03938c7f8cd8ff8cdb.json
matplotplusplus/: Makefile  Matplot++.cbp  cmake_install.cmake
matplotplusplus/source/: Makefile  cmake_install.cmake
matplotplusplus/source/matplot/: Makefile  cmake_install.cmake
